# news-summarizer

./: README.md  app.py  chains.py  config.py  graph.py  nodes.py  prompts.py  pyproject.toml  requirements.txt  router.py  scraper.py  state.py
prompts/: hallucinationchecker.txt  relevance.txt  similaritychecker.txt  summarization.txt
