[project]
name = "summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.7",
    "langgraph>=1.2.6",
    "newsapi-python>=0.2.7",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rouge-score>=0.1.2",
    "streamlit>=1.58.0",
]
